    For Apache 2.4 and later, set the authenticated user to the empty
    string when WebAuthOptional is enabled and the user isn't
    authenticated, which restores the behavior of Apache 2.2.  Be aware
    that this means REMOTE_USER may show up in the environment when
    WebAuthOptional is set the user is not authenticated, but the value
    will be empty.

WebAuth 4.5.3 (2013-05-15)

    SECURITY: Reset all header contents between WebLogin requests, fixing
    problems introduced in WebAuth 4.4.1 when WebLogin began using a
    persistent CGI::Application object with FastCGI.  WebLogin
    installations that used FastCGI and the $REMUSER_REDIRECT setting in
    webkdc.conf could fail with infinite redirect loops or leak security
    information, such as single sign-on cookies, from one authenticated
    user to another.  (CVE-2013-2106)

WebAuth 4.5.2 (2013-05-14)

    WebLogin now supports preserving the remember_login setting on the
    login page after a failed authentication, instead of resetting the
    checkbox to the default.  Taking advantage of this support requires
    local template changes.  See the sample login.tmpl file for an example
    of how to write the template.

    Fix clearing of account authentication attempts (for lockout)
    following a successful authentication.

    Fix setting cookies on the WebLogin error page so that single sign-on
    cookies are still correctly created.

    WebLogin no longer erroneously clears single sign-on and persistent
    factor cookies when redirecting the user to test for session cookie
    support.

WebAuth 4.5.1 (2013-05-01)

    Fix bugs in the remember_login feature introduced in WebAuth 4.5.0
    that would cause WebLogin to discard all single sign-on cookies in the
    default configuration and many other common situations.  WebLogin
    should now reliably respect the value sent by the form, and should
    retain single sign-on and persistent factor cookies in situations