@@ -3,6 +3,7 @@
     <factor>h</factor>
     <factor>m</factor>
     <factor>p</factor>
+    <factor>o</factor>
   </factors>
   <additional-factors>
     <factor>h</factor>
